Fix centering on firefox-based browsers

--- a/src/app/grants-management/grants-management.component.css
+++ b/src/app/grants-management/grants-management.component.css
@@ -17,7 +17,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   display: grid;
-  justify-self: center;
+  justify-items: center;
 }
 
 .grant-card {
